# opti_elec

./: .gitignore  README.md  app.py  config.json  pyproject.toml
data/: capteur_chambre_temperature.csv  capteur_salon_temperature.csv  meteo_forecast_2025-01-10.csv  paris_17eme_arrondissement_temperature.csv  radiateur_bureau_switch.csv
data/caussa_db/: switch.csv  temperature_ext.csv  temperature_int.csv  weather.csv
data/chauvigny_db/: switch.csv  temperature_int.csv  weather.csv
data/db/: capteur_salon_temperature.csv  forecasted_weather.csv  paris_17eme_arrondissement_temperature.csv  past_weather.csv  radiateur_bureau_switch.csv  weather.csv
data/logs/: runs.csv
data/nabu_db/: radiateur.csv  switch.csv  temperature_ext.csv  temperature_int.csv  weather.csv
data/tests data/: Data_Temperature Ext.csv
data/tests_data/: bedroom_temperature.csv  binary_chauffage.csv  capteur_salon_temperature.csv  living_room_temperature.csv  paris_17eme_arrondissement_temperature.csv  radiateur_bureau_switch.csv
pages/: 01_Data_Verification.py  02_Project_Epsilon.py  02_Test_and_Analysis.py  03_Sandbox_Scenario.py  04_Modelisation_V2.py
src/: data_loader.py  data_processing.py  model.py  optimizer.py  sandbox.py  utils.py  validation.py
utils/: base.py  data_collector.py  display.py  forecast.py  get_data.py  inertie_thermique.py  parameters_opti.py  scenario.py  thermal_modelisation.py
