[tool.poetry]
name = "optielec"
version = "0.1.0"
description = ""
authors = ["theo.badoz <theo.badoz@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
requests = "^2.32.3"
pymeteosource = "^1.7.0"
plotly = "^5.24.1"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
